--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "node": "*"
   },
   "dependencies" : {
-    "nodester-api": "0.1.4"
+    "nodester-api": "0.1.4",
+    "colors": "0.3.0",
+    "iniparser": "1.0.1"
   }
 }
