--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "bejesus-cli",
-  "description": "A CLI tool to allow interaction with the http://bejes.us/ platform.",
+  "name": "nodester-cli",
+  "description": "A CLI tool to allow interaction with the http://nodester.com/ platform.",
   "version": "0.2.1",
-  "homepage": "http://bejes.us/",
+  "homepage": "http://nodester.com/",
   "repository": "git://github.com/nodester/nodester-cli.git",
   "author": "Daniel Bartlett <dan@f-box.org> (http://danb-uk.net/)",
   "bin": {
-    "bejesus": "bin/nodester.js"
+    "nodester": "bin/nodester.js"
   },
   "engines": {
     "node": "*"
