--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "nodester-cli",
   "description": "A CLI tool to allow interaction with the http://nodester.com/ platform.",
-  "version": "0.2.1",
+  "version": "0.2.4",
   "homepage": "http://nodester.com/",
   "repository": "git://github.com/nodester/nodester-cli.git",
   "author": "Daniel Bartlett <dan@f-box.org> (http://danb-uk.net/)",
+  "contributors": [
+    "Dav Glass <davglass@gmail.com> @davglass",
+    "Chris Matthieu <chris@matthieu.us>",
+    "Abraham Williams <4braham@gmail.com>"
+  ],
   "bin": {
     "nodester": "bin/nodester.js"
   },
