woops, package fix

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "Dav Glass <davglass@gmail.com> @davglass",
     "Chris Matthieu <chris@matthieu.us>",
     "Abraham Williams <4braham@gmail.com>",
-    "Contra <contra@australia.edu>",
+    "Contra <contra@australia.edu>"
   ],
   "preferGlobal" : "true",
   "bin": {
