--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodester-cli",
   "description": "A CLI tool to allow interaction with the http://nodester.com/ platform.",
-  "version": "0.2.33",
+  "version": "0.2.34",
   "homepage": "http://nodester.com/",
   "repository": "git://github.com/nodester/nodester-cli.git",
   "author": "Daniel Bartlett <dan@f-box.org> (http://danb-uk.net/)",
@@ -21,7 +21,7 @@
     "node": "*"
   },
   "dependencies" : {
-    "nodester-api": "0.1.9",
+    "nodester-api": ">= 0.1.14",
     "colors": "0.3.0",
     "iniparser": "1.0.1"
   }
