--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodester-cli",
   "description": "A CLI tool to allow interaction with the http://nodester.com/ platform.",
-  "version": "0.2.34",
+  "version": "0.2.35",
   "homepage": "http://nodester.com/",
   "repository": "git://github.com/nodester/nodester-cli.git",
   "author": "Daniel Bartlett <dan@f-box.org> (http://danb-uk.net/)",
@@ -10,7 +10,7 @@
     "Chris Matthieu <chris@matthieu.us>",
     "Abraham Williams <4braham@gmail.com>",
     "Contra <contra@australia.edu>",
-    "Marcos Oliveira <marcosvm@gmail.com"
+    "Marcos Oliveira <marcosvm@gmail.com>"
   ],
   "preferGlobal" : "true",
   "bin": {
@@ -21,7 +21,7 @@
     "node": "*"
   },
   "dependencies" : {
-    "nodester-api": ">= 0.1.14",
+    "nodester-api": ">= 0.1.19",
     "colors": "0.3.0",
     "iniparser": "1.0.1"
   }
