[refactor] Set default file as default node version

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "bin": {
     "nodester": "bin/nodester.js"
   },
-  "main": "./lib/commands.js",
+  "main": "./bin/nodester.js",
   "engines": {
-    "node": "*"
+    "node": "0.6.x"
   },
   "dependencies": {
     "nodester-api": ">= 0.1.23",
