--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "nodester-api": ">= 0.1.23",
     "colors": "0.3.0",
     "iniparser": "1.0.1",
-    "read": "~0.1.0"
+    "read": "~0.1.0",
+    "cli-table": "0.0.2"
   },
   "devDependencies": {
     "mocha": "~1.0.3"
