--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test": "mocha test/test-*.js -R  spec"
   },
   "engines": {
-    "node": "0.6.x"
+    "node": ">0.6.x =<0.8.x"
   },
   "dependencies": {
     "nodester-api": ">= 0.1.23",
