--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodester-cli",
   "description": "A CLI tool to allow interaction with the http://nodester.com/ platform.",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "homepage": "http://nodester.com/",
   "repository": "git://github.com/nodester/nodester-cli.git",
   "author": "Daniel Bartlett <dan@f-box.org> (http://danb-uk.net/)",
@@ -26,7 +26,7 @@
     "node": ">0.6.x =<0.8.x"
   },
   "dependencies": {
-    "nodester-api": ">= 0.1.23",
+    "nodester-api": "latest",
     "colors": "0.3.0",
     "iniparser": "1.0.1",
     "read": "~0.1.0",
